# scipion-em-topaz

./: CHANGES.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: publish_and_tag.yml
topaz/: __init__.py  bibtex.py  constants.py  convert.py  objects.py  protocols.conf
topaz/protocols/: __init__.py  protocol_base.py  protocol_picking.py  protocol_topaz_complete.py  protocol_topaz_import.py  protocol_topaz_picking.py  protocol_topaz_training.py  protocol_training.py
topaz/tests/: __init__.py  test_protocol_topaz.py  test_protocols.py
